--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -5,25 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="aboutAs.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style1.css">
     <link rel="stylesheet" type="text/css" href="aboutAs.css">
+    <link rel="stylesheet" type="text/css" href="../common/navbar-footer.css">
+
     <title>About Us - DietShop</title>
 </head>
 <body>
 <nav id="navbar">
     <ul id="navcontent">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../homePage/index.html">Home</a></li>
+        <li><a href="../aboutAs/aboutAs.html">About</a></li>
         <li><a href="#">Menu</a></li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
-
-        <!-- <a href="../logIn/logIn.html" class="btn1">Log In</a> -->
     </ul>
+    <a href="../logIn/logIIn.html" class="btn1">Log In</a>
 </nav>
-<div class="circle-top"></div>
-<div class="circle-bottom"></div>
 <div class="about-content wide">
-    <h2 style="text-align: center;">Our Story</h2>
+    <h2>Our Story</h2>
     <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
         resources to lead healthier lives through proper nutrition and catering services.</p>
     <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
@@ -36,19 +34,18 @@
         the power of healthy eating.</p>
 </div>
 <header>
-<div class="header-content">
-    <span>company management</span>
-    <h1>Meet a team of experts and innovators who are pioneers in their field</h1>
-</div>
+    <div class="header-content">
+        <span>company management</span>
+        <h1>Meet a team of experts and innovators who are pioneers in their field</h1>
+    </div>
 </header>
-
 <section>
     <div class="card">
-        <img src="" >
+        <img src="">
         <h2>Megi Grenazi</h2>
     </div>
     <div class="card">
-        <img src="" >
+        <img src="">
         <h2>Grasjela Celaj</h2>
     </div>
     <div class="card">
@@ -56,14 +53,13 @@
         <h2>Kismete Guri</h2>
     </div>
     <div class="card">
-        <img src="" >
+        <img src="">
         <h2>Elda Halilaj</h2>
     </div>
     <div class="card">
-        <img src="" >
+        <img src="">
         <h2>Arber Allko</h2>
     </div>
-
 </section>
 
 <!-- Update the Testimonials section in about.html -->
@@ -77,7 +73,7 @@
             </div>
             <div class="testimonial">
                 <p>"I highly recommend DietShop to anyone looking to improve their health and wellness.</p>
-                  <p>  The catering service is exceptional!"</p>
+                <p> The catering service is exceptional!"</p>
                 <p class="testimonial-author">- Mark Davis</p>
             </div>
             <div class="testimonial">
