--- a/homePage/index.html
+++ b/homePage/index.html
@@ -3,29 +3,29 @@
       xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="styles.css" rel="stylesheet">
+    <link href="../common/navbar-footer.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <title>DietShop</title>
 </head>
 <body>
 <nav id="navbar">
     <ul id="navcontent">
-        <li><a href="#">Home</a></li>
-        <li><a href="../aboutAs/aoutAs.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../aboutAs/aboutAs.html">About</a></li>
         <li><a href="#">Menu</a></li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
     </ul>
-
-
-    <a href="../logIn/logIIn.html" class="btn1">Log In</a>
+    <a class="btn1" href="../logIn/logIIn.html">Log In</a>
 </nav>
 <header>
     <h1 id="top">Nutrition & Catering</h1>
-    <h1 id="top1">DietShop</h1>
+    <h1 id="top1">Welcome to DietShop, your one-stop destination for all your nutrition and catering needs.</h1>
 </header>
 <hr>
 <div id="row1">
-    Welcome to DietShop - Nutrition & Catering Services
+    Welcome to DietShop - Here ARE WHAT WE CAN OFFER YOU!
 </div>
 <section>
     <div class="wrap wrap--1">
@@ -54,165 +54,140 @@
         </div>
     </div>
 </section>
-
+<hr>
 <div class="abonohuuuu">
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <div class="container-fluid-sub bg-transparent my-4 p-3" style="position: relative">
-                <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
-                    <div class="col hp">
-            <div class="card-sub h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg" class="card-img-top-sub"
-                         alt="Delicious Food" />                </a>
-
-                <div class="label-top-sub shadow-sm">
-                    <a class="text-white">SALE</a>
-                </div>
-                <div class="card-body-sub">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">150$</span>
-                        <span class="float-start badge rounded-pill bg-success">130$</span>
-
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title-sub">
-                        <a target="_blank" href="#">Gain Weight Plan</a>
-                    </h5>
-
-                    <div class="d-grid gap-2 my-4">
-
-                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>
-
-                    </div>
-                    <div class="clearfix mb-1">
-
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
-
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
-
-            </span>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="container-fluid-sub bg-transparent my-4 p-3" style="position: relative">
+                    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+                        <div class="col hp">
+                            <div class="card-sub h-100 shadow-sm">
+                                <a href="#">
+                                    <img alt="Delicious Food"
+                                         class="card-img-top-sub"
+                                         src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg"/>
+                                </a>
+                                <div class="label-top-sub shadow-sm">
+                                    <a class="text-white">SALE</a>
+                                </div>
+                                <div class="card-body-sub">
+                                    <div class="clearfix mb-3">
+                                        <span class="float-start badge rounded-pill bg-success"
+                                              style="text-decoration: line-through;">150$</span>
+                                        <span class="float-start badge rounded-pill bg-success">130$</span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
+                                                                   href="#">reviews</a></span>
+                                    </div>
+                                    <h5 class="card-title-sub">
+                                        <a href="#" target="_blank">Gain Weight Plan</a>
+                                    </h5>
+                                    <div class="d-grid gap-2 my-4">
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                    </div>
+                                    <div class="clearfix mb-1">
+                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                                        <span class="float-end">
+                                          <i class="far fa-heart" style="cursor: pointer"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col hp">
+                            <div class="card-sub h-100 shadow-sm">
+                                <a href="#">
+                                    <img alt="product.title"
+                                         class="card-img-top-sub"
+                                         src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg"/>
+                                </a>
+                                <div class="card-body-sub">
+                                    <div class="clearfix mb-3">
+                                        <span class="float-start badge rounded-pill bg-success">200$</span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link" href="#">reviews</a></span>
+                                    </div>
+                                    <h5 class="card-title-sub">
+                                        <a href="#" target="_blank">Custom Meal Plan</a>
+                                    </h5>
+                                    <div class="d-grid gap-2 my-4">
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                    </div>
+                                    <div class="clearfix mb-1">
+                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                                        <span class="float-end">
+                                         <i class="far fa-heart" style="cursor: pointer"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col hp">
+                            <div class="card-sub h-100 shadow-sm">
+                                <a href="#">
+                                    <img alt="product.title"
+                                         class="card-img-top-sub"
+                                         src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg"/>
+                                </a>
+                                <div class="card-body-sub">
+                                    <div class="clearfix mb-3">
+                                        <span class="float-start badge rounded-pill bg-success">180$</span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link" href="#">reviews</a></span>
+                                    </div>
+                                    <h5 class="card-title-sub">
+                                        <a href="#" target="_blank">The 30-Day Women's Transformation Stack</a>
+                                    </h5>
+                                    <div class="d-grid gap-2 my-4">
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                    </div>
+                                    <div class="clearfix mb-1">
+                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                                        <span class="float-end">
+                                          <i class="far fa-heart" style="cursor: pointer"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col hp">
+                            <div class="card-sub h-100 shadow-sm">
+                                <a href="#">
+                                    <img alt="product.title"
+                                         class="card-img-top-sub"
+                                         src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg"/>
+                                </a>
+                                <div class="label-top-sub shadow-sm">
+                                    <a class="text-white">SALE</a>
+                                </div>
+                                <div class="card-body-sub">
+                                    <div class="clearfix mb-3">
+                                        <span class="float-start badge rounded-pill bg-success"
+                                              style="text-decoration: line-through"> 180$</span>
+                                        <span class="float-start badge rounded-pill bg-success"> 150$</span>
+                                        <span class="float-end"><a class="small text-muted text-uppercase aff-link"
+                                                                   href="#">reviews</a></span>
+                                    </div>
+                                    <h5 class="card-title-sub">
+                                        <a href="#" target="_blank">The 30-Day Men's Transformation Stack</a>
+                                    </h5>
+                                    <div class="d-grid gap-2 my-4">
+                                        <a class="btn-sub btn-warning-sub bold-btn-sub" href="#">add to cart</a>
+                                    </div>
+                                    <div class="clearfix mb-1">
+                                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+                                        <span class="float-end">
+                                           <i class="far fa-heart" style="cursor: pointer"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-                    <div class="col hp">
-            <div class="card-sub h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg" class="card-img-top-sub" alt="product.title" />
-                </a>
-
-                <div class="card-body-sub">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">200$</span>
-
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title-sub">
-                        <a target="_blank" href="#">Custom Meal Plan</a>
-                    </h5>
-
-                    <div class="d-grid gap-2 my-4">
-
-                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>
-
-                    </div>
-                    <div class="clearfix mb-1">
-
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
-
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
-
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-                    <div class="col hp">
-            <div class="card-sub h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg" class="card-img-top-sub" alt="product.title" />
-                </a>
-
-                <div class="card-body-sub">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">180$</span>
-
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title-sub">
-                        <a target="_blank" href="#">The 30-Day Women's Transformation Stack</a>
-                    </h5>
-
-                    <div class="d-grid gap-2 my-4">
-
-                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>
-
-                    </div>
-                    <div class="clearfix mb-1">
-
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
-
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
-
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-                    <div class="col hp">
-                       <div class="card-sub h-100 shadow-sm">
-                           <a href="#">
-                    <img src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg" class="card-img-top-sub" alt="product.title" />
-                </a>
-                       <div class="label-top-sub shadow-sm">
-                    <a class="text-white">SALE</a>
-                </div>
-                       <div class="card-body-sub">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 180$</span>
-                        <span class="float-start badge rounded-pill bg-success"> 150$</span>
-
-
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title-sub">
-                        <a target="_blank" href="#">The 30-Day Men's Transformation Stack</a>
-                    </h5>
-
-                    <div class="d-grid gap-2 my-4">
-
-                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>
-
-                    </div>
-                    <div class="clearfix mb-1">
-
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
-
-                        <span class="float-end">
-
-<i class="far fa-heart" style="cursor: pointer"></i>
-
-            </span>
-                    </div>
-                </div>
-                    </div>
-
-
-
         </div>
     </div>
-</div>
-        </div>
-    </div>
-</div>
-<div class="small text-muted my-4">Images by <a target="_blank" href="https://www.amazon.com/">Amazon</a></div>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css'>
-<link rel="stylesheet" type="text/css" href="../Abonimi/abonimi.css">
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css' rel='stylesheet'>
+    <link href="../Abonimi/abonimi.css" rel="stylesheet" type="text/css">
 </div>
 <hr>
 <footer class="detailed-footer">
