--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -6,8 +6,21 @@
   <title>Animated and Responsive Accordion</title>
   <!-- Connect your CSS file here -->
   <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="../common/navbar-footer.css">
+
 </head>
 <body>
+<nav id="navbar">
+  <ul id="navcontent">
+    <li><a href="../homePage/index.html">Home</a></li>
+    <li><a href="../aboutAs/aboutAs.html">About</a></li>
+    <li><a href="#">Menu</a></li>
+    <li><a href="../contact/contact.html">Contact Us</a></li>
+  </ul>
+
+
+  <a href="../logIn/logIIn.html" class="btn1">Log In</a>
+</nav>
   <!-- Your HTML content goes here -->
   <section class="section_accordion">
     <h1>Dieta ushqimore ne baze te semundjeve<br><small>Cfare duhet te bejme dhe cfare jo?</small></h1>
