--- a/contact/contact.html
+++ b/contact/contact.html
@@ -20,8 +20,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../common/navbar-footer.css">
+
 </head>
 <body>
+<nav id="navbar">
+    <ul id="navcontent">
+        <li><a href="../homePage/index.html">Home</a></li>
+        <li><a href="../aboutAs/aboutAs.html">About</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="../contact/contact.html">Contact Us</a></li>
+    </ul>
+
+
+    <a href="../logIn/logIIn.html" class="btn1">Log In</a>
+</nav>
 <div id="ContactUs">
     <h1>Contact Us</h1>
     <form id="contactForm" action="#">
@@ -78,19 +91,24 @@
         <label class="rating__label" for="rating-1">
             <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
                 <g transform="translate(16,16)">
-                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8"
+                            transform="scale(0)"/>
                 </g>
                 <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <g transform="translate(16,16) rotate(180)">
-                        <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
-                        <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+                        <polygon class="rating__star-stroke"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="none"/>
+                        <polygon class="rating__star-fill"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="#000"/>
                     </g>
                     <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
-                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16"/>
                     </g>
                 </g>
             </svg>
@@ -99,19 +117,24 @@
         <label class="rating__label" for="rating-2">
             <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
                 <g transform="translate(16,16)">
-                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8"
+                            transform="scale(0)"/>
                 </g>
                 <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <g transform="translate(16,16) rotate(180)">
-                        <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
-                        <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+                        <polygon class="rating__star-stroke"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="none"/>
+                        <polygon class="rating__star-fill"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="#000"/>
                     </g>
                     <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
-                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16"/>
                     </g>
                 </g>
             </svg>
@@ -120,19 +143,24 @@
         <label class="rating__label" for="rating-3">
             <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
                 <g transform="translate(16,16)">
-                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8"
+                            transform="scale(0)"/>
                 </g>
                 <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <g transform="translate(16,16) rotate(180)">
-                        <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
-                        <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+                        <polygon class="rating__star-stroke"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="none"/>
+                        <polygon class="rating__star-fill"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="#000"/>
                     </g>
                     <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
-                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16"/>
                     </g>
                 </g>
             </svg>
@@ -141,19 +169,24 @@
         <label class="rating__label" for="rating-4">
             <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
                 <g transform="translate(16,16)">
-                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8"
+                            transform="scale(0)"/>
                 </g>
                 <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <g transform="translate(16,16) rotate(180)">
-                        <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
-                        <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+                        <polygon class="rating__star-stroke"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="none"/>
+                        <polygon class="rating__star-fill"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="#000"/>
                     </g>
                     <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
-                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16"/>
                     </g>
                 </g>
             </svg>
@@ -162,19 +195,24 @@
         <label class="rating__label" for="rating-5">
             <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
                 <g transform="translate(16,16)">
-                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+                    <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8"
+                            transform="scale(0)"/>
                 </g>
                 <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <g transform="translate(16,16) rotate(180)">
-                        <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
-                        <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+                        <polygon class="rating__star-stroke"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="none"/>
+                        <polygon class="rating__star-fill"
+                                 points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07"
+                                 fill="#000"/>
                     </g>
                     <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
-                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
-                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+                        <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16"/>
+                        <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16"/>
                     </g>
                 </g>
             </svg>
