--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -31,7 +31,9 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>                
                 <h3>Cfare duhet te hame?</h3>
-                <p>This is some information in Box 1.</p>
+                <p>Preferoni një dietë të pasur me fruta, perime, 
+                  drithëra të tëra, produkte të qumështit të 
+                  ulët në yndyrë, dhe kufizoni konsumin e kripës.</p>
               </div>
               <div class="box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -39,8 +41,10 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
                 
-                <h3>Box 2</h3>
-                <p>This is some information in Box 2.</p>
+                <h3>Aktiviteti fizik</h3>
+                <p>Përfshini aktivitete të rregullta të ushtrimeve aerobike si ecje, 
+                  not, apo ecje me bicikletë, dhe bëni ushtrime të forta që 
+                  ndihmojnë në forcimin e muskujve dhe zemrës.</p>
               </div>
               <div class="box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -48,8 +52,9 @@
                   <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
                 
-                <h3>Box 3</h3>
-                <p>Tposition:</p>
+                <h3>Këshilla te përgjithshme</h3>
+                <p>Monitoroni tensionin e gjakut, mbani një peshë të shëndetshme,
+                   ulni konsumin e alkoolit dhe duhanit, dhe merrni terapinë e rekomanduar nga mjeku.</p>
               </div>
             </div>
           </div>
@@ -63,7 +68,7 @@
   <div class="accordion">
     <div class="card is-active">
       <a class="card__title is-active" data-toggle="collapse" href="#content2">
-        Second Accordion Title
+        Diabeti
         <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
         </svg>
@@ -73,16 +78,19 @@
         <div class="card__content">
           <div class="container">
             <div class="box">
-              <h3>Second Box 1</h3>
-              <p>This is some information in the second Box 1.</p>
+              <h3>Përzgjedhja e ushqimeve</h3>
+              <p>Preferoni ushqime me indeks glikemik të ulët si fruta,
+                 perime, grurë të plotë, proteina të pasura dhe yndyra të shëndetshme.</p>
             </div>
             <div class="box">
-              <h3>Second Box 2</h3>
-              <p>This is some information in the second Box 2.</p>
+              <h3>Aktiviteti fizik</h3>
+              <p> Kryejini ushtrime aerobike të rregullta si ecje, forconi muskujt
+                 dhe përqendrohuni në kontrollin e niveleve të sheqerit në gjak.</p>
             </div>
             <div class="box">
-              <h3>Second Box 3</h3>
-              <p>This is some information in the second Box 3.</p>
+              <h3>Këshilla të përgjithshme</h3>
+              <p>Monitoroni nivelet e sheqerit në gjak, ruani një dietë të rregullt 
+                dhe merrni trajtim mjekësor sipas nevojës.</p>
             </div>
           </div>
         </div>
@@ -96,7 +104,7 @@
   <div class="accordion">
     <div class="card is-active">
       <a class="card__title is-active" data-toggle="collapse" href="#content3">
-        Second Accordion Title
+        Sëmundja e zemrës
         <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
         </svg>
@@ -107,15 +115,17 @@
           <div class="container">
             <div class="box">
               <h3>Second Box 1</h3>
-              <p>This is some information in the second Box 1.</p>
+              <p>Konsumoni një dietë të pasur me fruta, perime, grurë të plotë,
+                 peshk dhe yndyra të shëndetshme si vaj ulliri.</p>
             </div>
             <div class="box">
-              <h3>Second Box 2</h3>
-              <p>This is some information in the second Box 2.</p>
+              <h3>Aktiviteti fizik</h3>
+              <p>Kryejini aktivitete të rregullta fizike si ecje shpejtë ose jogging, ushtrime aerobike.</p>
             </div>
             <div class="box">
-              <h3>Second Box 3</h3>
-              <p>This is some information in the second Box 3.</p>
+              <h3>Këshilla te përgjithshme</h3>
+              <p>Kontrolloni peshën tuaj, monitoroni tensionin e gjakut,
+                 mos duhet të konsumoni duhan ose alkool në sasi të mëdha.</p>
             </div>
           </div>
         </div>
