--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -10,6 +10,18 @@
 
 <main>
 
+    <nav id="navbar">
+        <ul id="navcontent">
+            <li><a href="../homePage/index.html">Home</a></li>
+            <li><a href="../aboutAs/aboutAs.html">About</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="../contact/contact.html">Contact Us</a></li>
+        </ul>
+
+
+        <a href="../logIn/logIIn.html" class="btn1">Log In</a>
+    </nav>
+
     <button title="Go to top" class="top-button" ><a href="#top">TOP</a></button>
 
     <div  class="the-content">
@@ -45,7 +57,7 @@
         </div>
     </div>
 </main>
-<nav class="day">
+<div class="day">
     <p class="container" id="femij" >Fëmijët e Rritur dhe Adoleshentët (12-18)</p>
     <ul class="days" >
         <li><a href="#dita1" >E Hene</a></li>
@@ -57,7 +69,7 @@
         <li><a href="#dita7">E Diele</a></li>
         <!-- Shto ditët e tjera këtu -->
     </ul>
-</nav>
+</div>
     <section id="dita1" >
         <h2>E Hene</h2>
         <ul>
@@ -122,7 +134,7 @@
 </section>
 
 
-<nav class="day">
+<div class="day">
     <p class="container" id="19-40">Të Rriturit (19-40 vjeç)</p>
     <ul class="days" >
         <li><a href="#mosha19_40dita1" >E Hene</a></li>
@@ -134,7 +146,7 @@
         <li><a href="#mosha19_40dita7">E Diele</a></li>
         <!-- Shto ditët e tjera këtu -->
     </ul>
-</nav>
+</div>
 <section id="mosha19_40">
     <h3 id="mosha19_40dita1">E Hënë</h3>
     <ul>
@@ -187,7 +199,7 @@
 </section>
 
 
-<nav class="day">
+<div class="day">
     <p class="container" id="mosha">Personat mbi 50 vjeç</p>
     <ul class="days" >
         <li><a href="#mosha50_plus_dita1" >E Hene</a></li>
@@ -199,7 +211,7 @@
         <li><a href="#mosha50_plus_dita7">E Diele</a></li>
         <!-- Shto ditët e tjera këtu -->
     </ul>
-</nav>
+</div>
 <section id="mosha50_plus">
     <h3 id="mosha50_plus_dita1">E Hënë</h3>
     <ul>
@@ -251,13 +263,13 @@
     </ul>
 </section>
 
-<nav class="day">
+<div class="day">
     <p class="container" id="vlera">Vlerat Ushqyese</p>
     <ul class="days" >
         <li><a href="#Fruta" >Fruta </a></li>
         <li><a href="#Perime">Perime</a></li>
     </ul>
-</nav>
+</div>
 
 <section id="Fruta">
     <div class="gallery1">
